# src/app.ts
@@ -1,36 +1,41 @@
 import helmet from 'helmet'
+import v1routes from './v1/routes'
 import createHttpError from 'http-errors'
 import swaggerUi from 'swagger-ui-express'
 import morganLogger from './utils/morganLogger'
-import rateLimiter from './middlewares/rateLimiter'
-import exampleRoutes from './routes/example.routes'
 import swaggerDocument from './swagger.example.json'
+import { rateLimiter } from './middlewares/rateLimiter'
 import { errorHandler } from './middlewares/errorHandler'
 import express, { NextFunction, Request, Response } from 'express'
 
 const app = express()
 
+//application-level middlewares
 app.use(helmet())
 app.use(rateLimiter)
 app.use(express.json())
 app.use(express.urlencoded({ extended: true }))
 app.use(morganLogger)
 
+//base url
 app.get('/', (_req: Request, res: Response) =>
 	res.send(
 		'<span>Server is running!! Find api docs here - <a href="/api-docs">API DOCS</a></span>'
 	)
 )
 
+//open-api docs route
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
-app.use('/example/books', exampleRoutes)
+//api v1 routes
+app.use('/api/v1', v1routes)
 
-//if route doesnot exit (unknown route)
+//if url doesnot exit (unknown route)
 app.use('*', (_req: Request, _res: Response, next: NextFunction) => {
 	next(new createHttpError.NotFound())
 })
 
+//last middleware
 app.use(errorHandler)
 
 export default app
